--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -10,6 +10,7 @@
 
 body {
   display: flex;
-  flex-flow: column nowrap;
+  flex-direction: column;
   min-height: 100vh;
+  background-color: var(--theme-color-light);
 }
